[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/smallEngines/smallEngine0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/smallLander/smallLander0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/smallLander/payloadCapR.png" type="Texture" id=3]
[ext_resource path="res://Sprites/smallStages/ss2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/smallEngines/FlameTest.png" type="Texture" id=5]
[ext_resource path="res://Sprites/smallEngines/smallEngine1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/LanderTest.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Stage.gd" type="Script" id=8]
[ext_resource path="res://Sprites/smallLander/payloadCapL.png" type="Texture" id=9]
[ext_resource path="res://Sounds/rocket.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=7]
resource_name = "DeployPayload"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CapR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 248, 136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CapL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -224, 136 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CapL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -144.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CapR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 102.9 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CapR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CapR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 128.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CapL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CapL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 8 )

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.7745, 0.0, 0, 0 ]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.027451, 0.529412, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.282353, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 9 )

[node name="TestScene" type="Node2D"]

[node name="Lander" type="Sprite" parent="."]
position = Vector2( 176, 112 )
texture = ExtResource( 2 )
script = ExtResource( 7 )

[node name="CapR" type="Sprite" parent="Lander"]
rotation = 2.24449
texture = ExtResource( 3 )

[node name="CapL" type="Sprite" parent="Lander"]
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lander"]
anims/DeployPayload = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Stage2" type="RigidBody2D" parent="Lander"]
position = Vector2( 0, 16 )
z_index = 1
gravity_scale = 0.0
script = ExtResource( 8 )
engineParticles = NodePath("S2Engine/CPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lander/Stage2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Lander/Stage2"]
texture = ExtResource( 4 )

[node name="S2Engine" type="Sprite" parent="Lander/Stage2"]
position = Vector2( 0, 16 )
texture = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Lander/Stage2/S2Engine"]
modulate = Color( 1, 1, 1, 0.462745 )
material = SubResource( 1 )
position = Vector2( 0, 16 )
emitting = false
texture = ExtResource( 5 )
direction = Vector2( 0, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 6.0
initial_velocity_random = 1.0
scale_amount_curve = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Lander/Stage2"]
visible = false
margin_left = -72.0
margin_top = -8.0
margin_right = -16.0
margin_bottom = 6.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 90.0

[node name="engineSound" type="AudioStreamPlayer2D" parent="Lander/Stage2"]
stream = ExtResource( 10 )

[node name="Stage1" type="RigidBody2D" parent="Lander"]
position = Vector2( 0, 32 )
z_index = 2
gravity_scale = 0.0
script = ExtResource( 8 )
engineParticles = NodePath("S1Engine/CPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lander/Stage1"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Lander/Stage1"]
texture = ExtResource( 4 )

[node name="S1Engine" type="Sprite" parent="Lander/Stage1"]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Lander/Stage1/S1Engine"]
modulate = Color( 1, 1, 1, 0.462745 )
material = SubResource( 1 )
position = Vector2( 0, 16 )
emitting = false
texture = ExtResource( 5 )
direction = Vector2( 0, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 6.0
initial_velocity_random = 1.0
scale_amount_curve = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Lander/Stage1"]
visible = false
margin_left = -72.0
margin_top = -8.0
margin_right = -16.0
margin_bottom = 6.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 90.0

[node name="engineSound" type="AudioStreamPlayer2D" parent="Lander/Stage1"]
stream = ExtResource( 10 )
